1.2

Usage is now aligned and alphabetically sorted
Added the hidden attribute

1.1

Better internationalization
Password support
Type converters
